[gd_scene load_steps=34 format=3 uid="uid://dnhulsx17skef"]

[ext_resource type="Script" uid="uid://2i7xvgevpqmy" path="res://player/player.gd" id="1_qjkh3"]
[ext_resource type="Texture2D" uid="uid://daevt8ai8xoht" path="res://third-party/Elthen/DwarfSpriteSheet1.3v.png" id="2_g6k8r"]
[ext_resource type="AudioStream" uid="uid://b6w62pkixw4fr" path="res://third-party/sounds/swings/axe-swing.mp3" id="3_boad6"]
[ext_resource type="Script" uid="uid://4qeft16wcoc1" path="res://player/action_radius.gd" id="4_rgyib"]
[ext_resource type="PackedScene" uid="uid://b14qrhy5ybx0w" path="res://common/suck_radius/suck_radius.tscn" id="5_hg6s5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1hntc"]
atlas = ExtResource("2_g6k8r")
region = Rect2(0, 0, 512, 256)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0fogc"]
radius = 2.0
height = 10.0

[sub_resource type="Animation" id="Animation_dkrat"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1d0hc"]
resource_name = "attack_left"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Audio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_boad6")
}],
"times": PackedFloat32Array(0.1)
}
tracks/2/use_blend = true
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_locked_anim_started"
}, {
"args": [],
"method": &"_locked_anim_finished"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_attack_impact"
}]
}

[sub_resource type="Animation" id="Animation_a3qey"]
resource_name = "attack_right"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Audio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_boad6")
}],
"times": PackedFloat32Array(0.1)
}
tracks/2/use_blend = true
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_locked_anim_started"
}, {
"args": [],
"method": &"_locked_anim_finished"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_attack_impact"
}]
}

[sub_resource type="Animation" id="Animation_0m8cx"]
resource_name = "idle_left"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tg8q0"]
resource_name = "idle_right"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wmnwf"]
resource_name = "move_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_eidgs"]
resource_name = "move_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oyefn"]
_data = {
&"RESET": SubResource("Animation_dkrat"),
&"attack_left": SubResource("Animation_1d0hc"),
&"attack_right": SubResource("Animation_a3qey"),
&"idle_left": SubResource("Animation_0m8cx"),
&"idle_right": SubResource("Animation_tg8q0"),
&"move_left": SubResource("Animation_wmnwf"),
&"move_right": SubResource("Animation_eidgs")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_74q37"]
radius = 24.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2hepq"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_21hir"]
animation = &"attack_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_l3leq"]
blend_point_0/node = SubResource("AnimationNodeAnimation_2hepq")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_21hir")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4qo0u"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f2pvk"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_7hx8g"]
blend_point_0/node = SubResource("AnimationNodeAnimation_4qo0u")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_f2pvk")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kv7rp"]
animation = &"move_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s2272"]
animation = &"move_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_b4oq7"]
blend_point_0/node = SubResource("AnimationNodeAnimation_kv7rp")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_s2272")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_88tpt"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_26v4y"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0lfke"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5hgr6"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rewbv"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mxpht"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gifgq"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dhtgq"]
states/Start/position = Vector2(136, 102)
states/attack/node = SubResource("AnimationNodeBlendSpace1D_l3leq")
states/attack/position = Vector2(459, 116)
states/idle/node = SubResource("AnimationNodeBlendSpace1D_7hx8g")
states/idle/position = Vector2(257, 221)
states/move/node = SubResource("AnimationNodeBlendSpace1D_b4oq7")
states/move/position = Vector2(420, 284)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_88tpt"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_26v4y"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_0lfke"), "idle", "move", SubResource("AnimationNodeStateMachineTransition_5hgr6"), "move", "idle", SubResource("AnimationNodeStateMachineTransition_rewbv"), "move", "attack", SubResource("AnimationNodeStateMachineTransition_mxpht"), "attack", "move", SubResource("AnimationNodeStateMachineTransition_gifgq")]
graph_offset = Vector2(-181.5, 103)

[node name="Player" type="CharacterBody2D" groups=["persist", "player"]]
collision_layer = 2
script = ExtResource("1_qjkh3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -13)
texture = SubResource("AtlasTexture_1hntc")
hframes = 8
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0fogc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oyefn")
}

[node name="ActionRadius" type="Area2D" parent="." node_paths=PackedStringArray("reference_node")]
visible = false
collision_layer = 0
collision_mask = 9
script = ExtResource("4_rgyib")
reference_node = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionRadius"]
shape = SubResource("CircleShape2D_74q37")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_dhtgq")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/idle = false
parameters/conditions/is_moving = false
parameters/attack/blend_position = 1.0
parameters/idle/blend_position = 1.0
parameters/move/blend_position = 1.0

[node name="Audio" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
bus = &"Sounds"

[node name="SuckRadius" parent="." instance=ExtResource("5_hg6s5")]
visible = false

[node name="CamRemote" type="RemoteTransform2D" parent="."]

[connection signal="body_entered" from="ActionRadius" to="ActionRadius" method="_on_body_entered"]
[connection signal="body_exited" from="ActionRadius" to="ActionRadius" method="_on_body_exited"]
